# gray-tunneled-hashing

./: .gitignore  README.md  pyproject.toml
apps/: README.md  demo_cli.py
docs/: DEFAULTS_AND_TUNING.md
experiments/: README.md
scripts/: README.md  analyze_benchmark_results.py  analyze_block_tunneling_impact.py  analyze_cosine_hamming_correlation.py  analyze_gray_code_structure.py  analyze_hamming_ball_coverage.py  analyze_hamming_distances_evolution.py  analyze_initialization_strategies.py  analyze_objective_contribution.py  analyze_optimization_landscape.py  analyze_optimization_trajectory.py  analyze_permutation_quality.py  analyze_sprint5_results.py  analyze_sprint6_results.py  analyze_sprint8_benchmark_results.py  analyze_tunneling_effect_sprint3.py  analyze_two_swap_landscape.py  benchmark_distribution_aware.py  benchmark_distribution_aware_lightweight.py  benchmark_distribution_aware_theoretical.py  benchmark_lsh_vs_random_proj.py  collect_detailed_metrics.py  compare_optimization_methods.py  compute_float_ground_truth.py  deep_diagnose_h1_h3.py  deep_investigate_recall.py  diagnose_j_phi_0_calculation.py  diagnose_j_phi_bug.py  diagnose_recall_issue.py  fix_j_phi_mapping.py  generate_synthetic_dataset_for_benchmark.py  instrument_hill_climbing.py  investigate_jphi_correlation.py  optimize_recall_directly.py  profile_build_time.py  run_benchmark_demo.py  run_experiment3_grid_search.py  run_real_experiment_baseline.py  run_real_experiment_gray_tunneled.py  run_sprint8_benchmark.py  (+8 more)
tests/: test_benchmark_script.py  test_binary_baselines.py  test_codebooks.py  (+40 more)
(+125 files in other folders)
